[package]
authors = ["Paul Saunders <pms1969@gmail.com>"]
categories = ["None"]
description = "Designed to be a sidecar/init container to transfer files to an s3 bucket based on file path"
edition = "2018"
keywords = ["s3", "filewatch", "aws", "sidecar", "kubernetes"]
license = "LICENSE"
name = "uploader"
readme = "README.md"
repository = "local"
version = "0.1.0"

[[bin]]
name = "uploader"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.31"
async-trait = "0.1.36"
bytes = "0.5"
clap = {version = "2.33.1", features = ["yaml"]}
futures = "0.3"
futures-retry = "0.5"
hyper = "0.14"
lazy_static = "1.4.0"
log = "0.4"
notify = "4.0"
pretty_env_logger = "0.4"
prometheus = "0.9.0"
retry = "1.0"
rusoto_core = {version = "0.44.0", default_features = false, features = ["rustls"]}
rusoto_s3 = {version = "0.44.0", default_features = false, features = ["rustls"]}
signal-hook = {version = "0.1.16", features = ["tokio-support"]}
thiserror = "1.0.20"
threadpool = "1.8"
tokio = {version = "0.2", features = ["full"]}
tokio-core = "0.1"
tokio-util = {version = "0.3", features = ["codec"]}
walkdir = "2.3"

[dev-dependencies]
tempfile = "3.1.0"
